fix: user role mapping and profile retrieval
- Fixed role validation in registration
- Added proper username mapping in learner responses
- Improved error handling in profile creation
- Added null checks for user relationships